--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<section>
 							<div class="content">
 								<a href="http://www.google.com">
-<img class="icon" border="0" alt="BAHA" src="images/BAHA.jpg" width="100%" height="60%">
+<img class="icon" border="0" alt="BAHA" src="images/BAHA.JPG" width="100%" height="60%">
 </a>
 
 								<header>
