--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<section>
 							<div class="content">
 								<a href="http://www.google.com">
-<img border="0" alt="Supermileage" src="images/Supermileage.JPG" width="100%" height="60%">
+<img border="0" alt="Supermileage" src="images/Supermileage.jpg" width="100%" height="60%">
 </a>
 								<header>
 									
