--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<section>
 							<div class="content">
 								<a href="http://www.google.com">
-<img border="0" alt="Formula" src="images/formula.JPG" width="100%" height="60%">
+<img border="0" alt="Formula" src="images/formula.jpg" width="100%" height="60%">
 </a>
 								<header>
 									
