--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<section>
 							<div class="content">
 								<a href="http://www.google.com">
-<img border="0" alt="GNTCR" src="images/GNTCR.PNG" width="100%" height="60%">
+<img border="0" alt="GNTCR" src="images/GNTCR.png" width="100%" height="60%">
 </a>
 								<header>
 									
@@ -104,7 +104,7 @@
 						<section>
 							<div class="content">
 								<a href="http://www.google.com">
-<img border="0" alt="Ottabotics" src="images/Ottabotics.JPG" width="100%" height="60%">
+<img border="0" alt="Ottabotics" src="images/Ottabotics.jpg" width="100%" height="60%">
 </a>
 								<header>
 								<header>
