--- a/index.html
+++ b/index.html
@@ -242,12 +242,10 @@ Canada (LOBBY floor)</p>
 
 						</section>
 						<section>
-							<h4>Staff Contact Directory</h4>
+							<h4>Contact Directory</h4>
 							<ul class="alt">
-								<li>Jason Demers: jason.a.demers@gmail.com </li>
-								<li>Hanan Anis: hanis@uOttawa.ca </li>
-								<li>Patrick Dumond: pdumond@uottawa.ca</li>
-								<li>Emmanuel Merakos: emera095@uottawa.ca</li>
+								<li>uojmts@gmail.com </li>
+								
 							</ul>
 						</section>
 						<section>
