--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@ Canada (LOBBY floor)</p>
 						</section>
 					</div>
 					<div class="copyright">
-						CEED - Univeristy Of Ottawa <a href="https://engineering.uottawa.ca/CEED"></a>, 
+						<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. 
+						<p>css template by templated.co</p>
 					</div>
 				</div>
 			</footer>
