--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="JMTS.html">Home</a></li>
-					<li><a href="elements.html">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					
 					<li><a href="generic2.html">Sponsors</a></li>
 				</ul>
 			</nav>
@@ -45,8 +45,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Our Teams:<strong><I>JOIN NOW!</I></strong></h2>
-						<p> <strong>All students from ALL Faculties</strong> welcome, Select a team to <strong>JOIN</strong> or select <I>Sponsor portal if you are a sponsor.</I></p>
+						<h2>Our Teams:<strong><I>VISIT and JOIN NOW!</I></strong></h2>
+						<p> <strong>All students from ALL Faculties</strong> welcome, Select a team to <strong>JOIN an orientation session</strong> or select <I>Sponsor portal if you are a sponsor.</I></p>
 					</header>
 					<div class="highlights">
 						<section>
