--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Sponsor Portal</h2>
-					<p>Sponsors are a crucial part in realizing the PITS projects. our sponsors guide us in our design, provide materials, services and funds to help develop world class teams at the university of Ottawa. If you wish to become a sponsor or for more info about our current sponsors and sponsorship process/benefits please <a href="url">click here</a>.</p>
+					<p>Sponsors are a crucial part in realizing the PITS projects. our sponsors guide us in our design, provide materials, services and funds to help develop world class teams at the university of Ottawa. If you wish to become a sponsor or for more info about our current sponsors and sponsorship process/benefits please <a href="sponsors.html">click here</a>.</p>
 				</div>
 			</section>
 
@@ -263,7 +263,7 @@ Canada (LOBBY floor)</p>
 							<h4>Follow Us</h4>
 							<ul class="plain">
 								
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+								<li><a href="https://www.facebook.com/John-Mcentyre-Team-Space-1586190914825246/?modal=admin_todo_tour"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
 								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
 								
 							</ul>
