--- a/sponsors.html
+++ b/sponsors.html
@@ -40,7 +40,7 @@
 								<a href="https://engineering.uottawa.ca/CEED"><img src="images/ceed.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://futurplus.ca/"><img src="images/futurplus.PNG" alt="" /></a>
+								<a href="https://futurplus.ca/"><img src="images/futurplus.png" alt="" /></a>
 							</div>
 							<div class="image fit">
 								<a href="http://www.gervaiselectronics.ca/"><img src="images/gervais.PNG" alt="" /></a>
