--- a/sponsors.html
+++ b/sponsors.html
@@ -43,49 +43,49 @@
 								<a href="https://futurplus.ca/"><img src="images/futurplus.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="http://www.gervaiselectronics.ca/"><img src="images/gervais.PNG" alt="" /></a>
+								<a href="http://www.gervaiselectronics.ca/"><img src="images/gervais.png" alt="" /></a>
 							</div>
 
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="https://www.redbull.com/ca-en/"><img src="images/redbull.PNG" alt="" /></a>
+								<a href="https://www.redbull.com/ca-en/"><img src="images/redbull.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/demo.PNG" alt="" /></a>
+								<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/demo.PNG" alt="" /></a>
+								<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/sponsorus.jpg" alt="" /></a>
+								<a href="detail1.html"><img src="images/sponsorus.JPG" alt="" /></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="https://www.uottawa.ca/en"><img src="images/uottawa.PNG" alt="" /></a>
+								<a href="https://www.uottawa.ca/en"><img src="images/uottawa.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-							<a href="detail1.html"><img src="images/demo.PNG" alt="" /></a>
+							<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/demo.PNG" alt="" /></a>
+								<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/demo.PNG" alt="" /></a>
+								<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="https://www.facebook.com/lighttouchtuning/"><img src="images/light1.PNG"  alt="" /></a>
+								<a href="https://www.facebook.com/lighttouchtuning/"><img src="images/light1.png"  alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://futurplus.ca/"><img src="images/futurplus.PNG" alt="" /></a>
+								<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/demo.PNG" alt="" /></a>
+								<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="detail1.html"><img src="images/demo.PNG" alt="" /></a>
+								<a href="detail1.html"><img src="images/demo.png" alt="" /></a>
 							</div>
 
 					</div>
