--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Sponsor Portal</h2>
-					<p>Sponsors are a crucial part in realizing the PITS projects. our sponsors guide us in our design, provide materials, services and funds to help develop world class teams at the university of Ottawa. If you wish to become a sponsor or for more info about our current sponsors and sponsorship process/benefits please <a href="sponsors.html">click here</a>.</p>
+					<p>Sponsors are a crucial part in realizing the PITS projects. our sponsors guide us in our design, provide materials, services and funds to help develop world class teams at the university of Ottawa. If you wish to become a sponsor or for more info about our current sponsors and sponsorship process/benefits please <a href="sponsors.html"><h2>click here</h2></a>.</p>
 				</div>
 			</section>
 
