--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							<section>
 							<div class="content">
 								
-<img border="0" alt="Aero" src="images/aero2.jpg" width="100%" height="50%">
+<img border="0" alt="Aero" src="images/aero2.JPG" width="100%" height="50%">
 </a>
 								<header>
 								
