--- a/findex.html
+++ b/findex.html
@@ -63,7 +63,7 @@
 									<p><a href="https://www.facebook.com/bajauottawa/"><h3><strong>BAJA</strong></h3></a></p>
 								</header>
 								<p><I>concevoir et construire<strong> des véhicules tout-terrain</strong> 	 qui survivra à un <strong>terrain accidenté et et impardonnable</strong>  </I> </p>
-								<p><a href="http://www.formulauottawa.com/"><I>NOUS JOINDRE</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>NOUS JOINDRE</I></a></p>
 								
 							</div>
 						</section>
@@ -83,7 +83,7 @@
 								</header>
 								<p> <I>Concevoir, développer et construire une <strong>voiture de course monoplace</strong>  
 pour le week-end non professionnel <strong>autocross racer</strong> avec le meilleur ensemble global de conception, de construction, de performance et de coût.</I> </p>
-								<p><a href="http://www.formulauottawa.com/"><I>NOUS JOINDRE</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>NOUS JOINDRE</I></a></p>
 							</div>
 						</section>
 						<section>
@@ -97,7 +97,7 @@ pour le week-end non professionnel <strong>autocross racer</strong> avec le meil
 								</header>
 								Développer et<strong>construire une voiture monoplace</strong>, qui consomme le moins de gaz. <strong> Concevez et construisez un moteur à partir de zéro!</strong>  
 Et obtenez la plus grande économie de carburant: la combustion <strong> OU</strong> électrique.</I>
-									<p><a href="http://www.formulauottawa.com/"><I>NOUS JOINDRE</I></a></p>
+									<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>NOUS JOINDRE</I></a></p>
 
 </p>
 							</div>
@@ -112,7 +112,7 @@ Et obtenez la plus grande économie de carburant: la combustion <strong> OU</str
 									<p><a href="https://www.facebook.com/uottawatbogg/"><h3><strong>CONCRETE TOBOGGAN (GNTCR)</strong></h3></a></p>
 								</header>
 									<p><I>Le projet consiste à concevoir et à construire un <strong>toboggan avec un cadre en métal</strong>  et une surface de roulement complètement en <strong>béton</strong>  et faire la course sur une colline enneigée raide! </I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>NOUS JOINDRE</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>NOUS JOINDRE</I></a></p>
 							</div>
 						</section>
 						<section>
@@ -126,7 +126,7 @@ Et obtenez la plus grande économie de carburant: la combustion <strong> OU</str
 									<p><a href="https://www.ottabotics.com/"><h3><strong>Ottabotics: (Roboboat and robot racing)</strong></h3></a></p>
 								</header>
 								<p><I> <strong>Bateaux robotisés, drones et voitures autonomes,</strong>  Que demander de plus pour satisfaire votre soif de robotique!</I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 						<section>
@@ -139,7 +139,7 @@ Et obtenez la plus grande économie de carburant: la combustion <strong> OU</str
 									<p><a href="https://www.facebook.com/uorocketry/"><h3><strong>Rocketry</strong></h3></a></p>
 								</header>
 								<p> <I>Un concours où les équipes doivent concevoir, construire et lancer une <strong>fusée expérimentale jusqu'à 10000 pieds!</strong></I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 
@@ -153,7 +153,7 @@ Et obtenez la plus grande économie de carburant: la combustion <strong> OU</str
 									<h3><strong>BIONICS</strong></h3>
 								</header>
 								<p><I>Concevoir et construire un <strong>dispositif robotique portable monté sur la hanche</strong> pour aider à la réadaptation des patients ayant une force musculaire réduite.</I> </p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 							<section>
@@ -166,7 +166,7 @@ Et obtenez la plus grande économie de carburant: la combustion <strong> OU</str
 									<p><a href="http://www.aerouottawa.com/"><h3><strong>SAE AERO</strong></h3></a></p>
 								</header>
 								<p><I>Concevoir et construire un <strong>Avion RC 10 pieds </strong>qui soulèvera le plus de poids!</I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 							<section>
@@ -179,7 +179,7 @@ Et obtenez la plus grande économie de carburant: la combustion <strong> OU</str
 									<h3><strong>Concrete Canoe</strong></h3>
 								</header>
 								<p><I>Un <strong>canoë</strong> fabriqué à partir de <strong> béton</strong>ça flotte! Venez aider à concevoir et à construire le meilleur avec Uottawa Conccrete canoe.</I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 					</div>
