--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<p><a href="https://www.facebook.com/bajauottawa/"><h3><strong>BAJA</strong></h3></a></p>
 								</header>
 								<p><I>Design and build an <strong>offroad vehicle</strong> 	 that will survive the <strong>severe punishment</strong>  of rough and unforgivable terrain. </I> </p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 								
 							</div>
 						</section>
@@ -82,7 +82,7 @@
 									<p><a href="http://www.formulauottawa.com/"><h3><strong>SAE FORMULA</strong></h3></a></p>
 								</header>
 								<p> <I>Design, develop and construct a <strong>single-seat racecar</strong>  for the non-professional weekend <strong>autocross racer</strong>  with the best overall package of design, construction, performance and cost.</I> </p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 						<section>
@@ -95,7 +95,7 @@
 									<h3><strong>Supermileages:( combustion and electric)</strong></h3>
 								</header>
 								<p> <I>Develop and <strong>construct a single-person</strong>, fuel-efficient vehicle and compete in the <strong>electric, combustion or Urban concept categories.</strong>   </I>
-									<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+									<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 
 </p>
 							</div>
@@ -110,7 +110,7 @@
 									<p><a href="https://www.facebook.com/uottawatbogg/"><h3><strong>CONCRETE TOBOGGAN (GNTCR)</strong></h3></a></p>
 								</header>
 								<p><I>The project involves designing and constructing a <strong>toboggan with a metal frame</strong>  and a running surface made completely out of <strong>concrete</strong>  to race it down a steep snow-covered hill! </I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 						<section>
@@ -124,7 +124,7 @@
 									<p><a href="https://www.ottabotics.com/"><h3><strong>Ottabotics: (Roboboat and robot racing)</strong></h3></a></p>
 								</header>
 								<p><I> <strong>Robot boats and autonomous cars,</strong>  what more can you ask to get your fill of robotics!</I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 						<section>
@@ -137,7 +137,7 @@
 									<p><a href="https://www.facebook.com/uorocketry/"><h3><strong>Rocketry</strong></h3></a></p>
 								</header>
 								<p> <I>A competition where teams must design, build and launch an experimental sounding <strong>rocket to 10000 ft!</strong></I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 
@@ -151,7 +151,7 @@
 									<h3><strong>BIONICS</strong></h3>
 								</header>
 								<p><I>Design and build a <strong>hip-mounted wearable robotic device</strong> to assist in the rehabilitation of patients with reduced muscular strength.</I> </p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 							<section>
@@ -164,7 +164,7 @@
 									<p><a href="http://www.aerouottawa.com/"><h3><strong>SAE AERO</strong></h3></a></p>
 								</header>
 								<p><I>Design and build a <strong>10-foot RC aircraft </strong>with the purpose of developing a fundamental understanding of flight.</I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 							<section>
@@ -177,7 +177,7 @@
 									<h3><strong>Concrete Canoe</strong></h3>
 								</header>
 								<p><I>A <strong>canoe</strong> made out of <strong>concrete </strong>that floats! Come help us design and build the best one at Uottawa Concrete canoe.</I></p>
-								<p><a href="http://www.formulauottawa.com/"><I>JOIN NOW</I></a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfuafhUGOMlVD_QLnCOGuLhbAGrdTpNeFs8lU2Mj37iONyOQw/viewform"><I>JOIN NOW</I></a></p>
 							</div>
 						</section>
 					</div>
