--- a/findex.html
+++ b/findex.html
@@ -208,7 +208,7 @@
 								
 								<div class="author">
 									<div class="image">
-										<img src="images/therockweb__square.jpg" alt="" />
+										<img src="images/jason1.jpg" height= 80px;  width= 100% alt="" />
 									</div>
 									<p class="credit">- <strong>Jason Demers</strong> <span> - CEED.</span></p>
 								</div>
@@ -263,7 +263,7 @@
 						<section>
 							<h4>CONTACTEZ NOUS</h4>
 							<ul class="alt">
-								<li>(coming soon) </li>
+							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUi3RqbkYVQMmLJkkcsQN4RqPxo2gTyhUMoIpGzByP0TnRSg/viewform?usp=sf_link"><I>Formulaire de contact</I></a></p>	
 								
 							</ul>
 						</section>
