--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 								
 								<div class="author">
 									<div class="image">
-										<img src="images/therockweb__square.jpg" alt="" />
+										<img src="images/jason1.jpg" height= 80px;  width= 100% alt="" />
 									</div>
 									<p class="credit">- <strong>Jason Demers</strong> <span>STAFF - CEED.</span></p>
 								</div>
@@ -264,8 +264,8 @@ Canada, Room 128 (1rst floor)</p>
 						<section>
 							<h4>Contact Directory</h4>
 							<ul class="alt">
-								<li>(coming soon) </li>
 								
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUi3RqbkYVQMmLJkkcsQN4RqPxo2gTyhUMoIpGzByP0TnRSg/viewform?usp=sf_link"><I>Contact form</I></a></p>
 							</ul>
 						</section>
 						<section>
