--- a/findex.html
+++ b/findex.html
@@ -208,7 +208,7 @@
 								
 								<div class="author">
 									<div class="image">
-										<img src="images/jason1.jpg" height= 80px;  width= 100% alt="" />
+										<img src="images/jason2.jpg"  alt="" />
 									</div>
 									<p class="credit">- <strong>Jason Demers</strong> <span> - CEED.</span></p>
 								</div>
