--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 				<a class="logo" href="https://engineering.uottawa.ca/CEED"><img src="images/CEEDBil.jpg" height="30" width="100" ></a>
 				<a class="" href="https://www.uottawa.ca/en" style="float: right; margin-right: 600px; margin-top: 20px"><img src="images/uo.png" height="50px" width=auto; ></a>
-				<a class="logo" href="findex.html" style="float: left; margin-left: 900px;" >Français</I> </a>
+				<a class="logo" href="findex.html" style="float: left; margin-left: 900px; height: 50px; width:auto; " >Français</I> </a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -208,7 +208,7 @@
 								
 								<div class="author">
 									<div class="image">
-										<img src="images/jason1.jpg" height= 80px;  width= 100% alt="" />
+										<img src="images/jason2.jpg"  alt="" />
 									</div>
 									<p class="credit">- <strong>Jason Demers</strong> <span>STAFF - CEED.</span></p>
 								</div>
