--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 		<!-- Header -->
 			<header id="header">
 
-				<a class="logo" href="https://engineering.uottawa.ca/CEED"><img src="images/CEEDBil.jpg" height="30" width="100" ></a>
-				<a class="" href="https://www.uottawa.ca/en" style="float: right; margin-right: 600px; margin-top: 20px"><img src="images/uo1.jpg" height="50px" width=auto; ></a>
-				<a class="logo" href="findex.html" style="float: left; margin-left: 900px; height: 50px; width:auto; " >Français</I> </a>
-				<nav>
+				<a class="logo" href="https://engineering.uottawa.ca/CEED"><img src="images/uo2.jpg" height="40" width="150" ></a>
+				
+				
+			<nav>
+					<a class="logo" href="findex.html">Français</I> </a>
 					<a href="#menu">Menu</a>
 				</nav>
 			</header>
